<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_nama" />

            <EditText
                android:id="@+id/filter_et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_usiamin" />

                    <NumberPicker
                        android:id="@+id/filter_np_usiamin"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:descendantFocusability="blocksDescendants"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_usiamax" />

                    <NumberPicker
                        android:id="@+id/filter_np_usiamax"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:descendantFocusability="blocksDescendants" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical"
                    android:text="@string/filter_pengalamankrj" />

                <NumberPicker
                    android:id="@+id/filter_np_pengalamankrj"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_kota" />

            <Spinner
                android:id="@+id/filter_spinner_kota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_agama" />

            <Spinner
                android:id="@+id/filter_spinner_agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_suku" />

            <Spinner
                android:id="@+id/filter_spinner_suku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_bahasa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/filter_cb_bhsinggris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_bahasainggris" />

                <CheckBox
                    android:id="@+id/filter_cb_bhsmandarin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_bahasamandarin" />

                <CheckBox
                    android:id="@+id/filter_cb_bhsmelayu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_bahasamelayu" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_profesi" />

            <Spinner
                android:id="@+id/filter_spinner_profesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_waktukerja" />

            <Spinner
                android:id="@+id/filter_spinner_waktukrj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/filter_tv_gaji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filter_gajijam" />

            <EditText
                android:id="@+id/filter_et_gaji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/filter_btn_cari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_cari" />

            <Button
                android:id="@+id/filter_btn_batal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_batal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>