<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:id="@+id/layout_asistenmini">

    <TextView
        android:id="@+id/asism_nama"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/namalengkap"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/asism_usia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asism_nama"
        android:layout_marginBottom="5dp"
        android:text="@string/usia"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/asism_agama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asism_usia"
        android:layout_marginBottom="5dp"
        android:text="@string/filter_agama"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/asism_btninfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asism_agama"
        android:text="@string/btn_selengkapnya"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/asism_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/foto"
        app:srcCompat="@mipmap/ic_launcher" />

    <RatingBar
        android:id="@+id/asism_rating"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/asism_img"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/asism_img"
        android:layout_below="@+id/asism_img"
        android:numStars="5"
        android:rating="5" />

</RelativeLayout>