<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fotoktp"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/doctmbh_iv_fotoktp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fotoktp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/doctmbh_btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/doctmbh_btn_batal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>