<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/email"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/lgn_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tv_email"
        android:layout_below="@id/tv_email"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lgn_et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/katasandi"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/lgn_et_katasandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:nextFocusUp="@id/lgn_et_katasandi"
        android:nextFocusLeft="@id/lgn_et_katasandi"
        android:hint="@string/katasandi"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/lgn_btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/lgn_et_katasandi"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:background="@drawable/buttonshape"
        />

    <TextView
        android:id="@+id/lgn_tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lgn_btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/daftar"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_blue_dark" />
</RelativeLayout>