<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/step3"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:id="@id/layout_asisten">
            </RelativeLayout>

            <EditText
                android:id="@+id/pms3_et_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/pms3_layout_listpekerjaan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/estimasi"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/pms3_et_estimate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/pms3_tv_estimasiwaktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mulai"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pms3_et_mulaitime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/pms3_et_mulaidate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="date" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selesai"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pms3_et_selesaitime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/pms3_et_selesaidate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="date" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/pms3_et_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/pms3_cb_kttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ketentuan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pms3_btn_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_prev"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/pms3_btn_pesan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_pesan"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>